# tarstats

./: .gitignore  AGENTS.md  README.md  pyproject.toml  setup.py  tarstats.py
src/tarstats/: __init__.py  cli.py  core.py
tarstats/: __init__.py  tarstats.py
testdir/: keks2
tests/: test_tarstats.py
tests/testdata/: testtar.tgz
