[project]
name = "tarstats"
version = "1.3.0"
description = "Generate compact statistics about tar archives"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Kristian Köhntopp", email = "kristian.koehntopp@gmail.com" }
]
license = "GPL-3.0-or-later"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Environment :: Console",
]
dependencies = []

[project.scripts]
tarstats = "tarstats.cli:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tarstats"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
